# ocamlpg

./: #hello.s#  hello.cmi  hello.cmx  hello.list.s  hello.ml  hello.ml~  hello.s  jparser.ml  lexer.ml  main.cmi  main.cmo  main.cmx  main.ml  main.ml~  main.s  run.bat  run.bat~  seq.ml  sequences.ml  sequences.ml~  test.c  test2.json  test3.json  tlists.ml  tlists.ml~
domains/: refs
domains/dpg/: dune-project
domains/dpg/_build/: .db  .digest-db  log
domains/dpg/_build/default/: dpg.dune-package  dpg.install
domains/dpg/_build/default/.dune/: configurator.v2
domains/dpg/_build/default/lib/: dpg.cma  dpg.cmxa  dpg.cmxs
domains/dpg/_build/default/lib/.dpg.objs/byte/: dpg.cmi  dpg.cmo  dpg.cmt
domains/dpg/_build/default/lib/.dpg.objs/native/: dpg.cmx
domains/dpg/_build/default/lib/.merlin-conf/: lib-dpg
domains/dpg/_build/default/test/.merlin-conf/: exe-test_dpg
domains/dpg/_build/default/test/.test_dpg.eobjs/byte/: dune__exe__Test_dpg.cmi  dune__exe__Test_dpg.cmti
domains/dpg/_build/default/test/.test_dpg.eobjs/native/: dune__exe__Test_dpg.cmx
domains/dpg/_build/install/default/lib/dpg/: META  dune-package  opam
domains/dpg/lib/: dune
domains/dpg/test/: dune
integrate/: http.ml
jparser/: test.json
jsons/: #x#  arrays.json  jsonp.ml  jsonp.ml~  number.json  strings.json  test.json  test.json~
networkp/: dune-project  exec  exec~
networkp/_build/: .db  .digest-db  log
networkp/_build/default/: networkp.dune-package  networkp.install
networkp/lib/: dune  dune~  server.ml~
networkp/test/: dune
(+23 files in other folders)
